added skills section icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@ body {
     line-height: 1.6;
 }
 
+a:contact{
+    margin-right: 10px;
+}
+
 nav {
     display: flex;
     justify-content: center;
