--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     line-height: 1.6;
 }
 
-a:contact{
+a.contact{
     margin-right: 10px;
 }
 
@@ -19,7 +19,7 @@ nav {
     margin-bottom: 20px;
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 100;
 }
 
 nav a {
@@ -33,10 +33,14 @@ nav a:hover {
     color: #4CAF50;
 }
 
-section {
-    padding: 50px 20px;
-    max-width: 800px;
+section.sections {
     margin: 0 auto;
+
+}
+
+section {
+    /* padding: 50px 20px; */
+    max-width: 800px;
 }
 
 #home {
